[tool.poetry]
name = "midtrans-demo"
version = "0.1.0"
description = ""
authors = ["Andhira Henrisen Sikoko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
midtransclient = "^1.4.2"
django = "^5.0.3"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
